# StashRelease

./: .dockerignore  .gitignore  Dockerfile  PRIVACY_POLICY.md  README.md  SPEC.md  keystore.properties.example  settings.gradle
.github/workflows/: ci.yml  release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: chip_selector.xml  chip_text_selector.xml
app/src/main/res/drawable/: bg_empty_gradient.xml  bg_icon_medallion.xml  ic_empty_inbox.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_note_add.xml  ic_pin.xml  ic_sync.xml  ic_type_apk.xml  ic_type_archive.xml  ic_type_audio.xml  ic_type_contact.xml  ic_type_document.xml  ic_type_image.xml  ic_type_link.xml  ic_type_other.xml  ic_type_text.xml  (+3 more)
docker/: compose.yml  entrypoint.sh
docs/: _config.yml  index.md
ios/: README.md
ios/Stash/: StashApp.swift
ios/Stash/Model/: ContentTypes.swift  Protocol.swift  StashCrypto.swift  StashStore.swift  SyncItem.swift
ios/Stash/Sync/: SyncClient.swift  SyncSettings.swift  TLSPinningDelegate.swift
ios/Stash/Views/: AddItemView.swift  ContentView.swift  ItemDetailView.swift  QRScannerView.swift  SettingsView.swift
ios/StashTests/: ContentTypesTests.swift  FilteringTests.swift  StashStoreTests.swift  SyncItemTests.swift  SyncSettingsTests.swift
server/: .gitignore  Cargo.toml
server/examples/: probe.rs
server/src/: auth.rs  config.rs  constants.rs  db.rs  hash.rs  main.rs  mirror.rs  protocol.rs  ratelimit.rs  session.rs  setup.rs  tls.rs  upload.rs  web.rs
server/templates/: index.html
(+48 files in other folders)
