[package]
name = "stash-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stash-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["multipart"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
strip = true
